session task done

--- a/state-managment-example/views/secret.pug
+++ b/state-managment-example/views/secret.pug
@@ -3,4 +3,6 @@ block content
     h1= 'This is password protected content'
     p= 'Some very secret text'
     
-        p   a(href='/logout')= 'Logout'
+    p   
+        
+        a(href='/logout')= 'Logout'
